# c_exercices

./: README.md
data_structures/linked_list/: doubly_linked_list.cpp  ordered_doubly_linked_list.cpp  ordered_singly_linked_list.cpp  singly_linked_list.cpp
data_structures/stack/: complex_stack.cpp  simple_stack.cpp
data_structures/tree/: binary_tree.cpp  n_ary_tree.cpp
hamming_code/: CMakeLists.txt  hamming_code.c  hamming_code.h
ordering_and_searching/bubble_sort-bynary_search/: vet_clinic.c
ordering_and_searching/sequential_search/: alumni.c
recursion/: fibonacci.c  from_1_to_20.c
